@@ -13,6 +13,7 @@
 - Added attr['is_page']=True to CMS Page navigation nodes
 - Fixed a bug where page tree styles didn't load from STATIC_URL that pointed
   to a different host
+- Honored CMS_RAW_ID_USERS in GlobalPagePermissionAdmin
 
 
 === 3.2.0 (2015-11-24) ===
